--- a/style/style.scss
+++ b/style/style.scss
@@ -31,7 +31,6 @@ form {
         padding: 0.25rem 0.5rem;
         margin: 0rem 0.5rem;
         font-size: 1.75rem;
-        border-radius: 15px;
     }
 
     input[type="number"] {
@@ -65,6 +64,8 @@ section {
 
     div.todo {
         display: flex;
+        align-items: center;
+        justify-content: center;
         width: 50vw;
         margin: 0.2rem 0rem;
         transition: all 0.5s;
@@ -95,6 +96,7 @@ section {
         button.complete {
             background-color: green;
             color: white;
+
             &:hover {
                 background-color: rgb(27, 200, 27);
             }
@@ -103,6 +105,7 @@ section {
         button.trashcan {
             background-color: red;
             color: white;
+
             &:hover {
                 background-color: rgb(255, 91, 91);
             }
@@ -118,10 +121,34 @@ i {
     opacity: 0.5;
 }
 
+div.sort {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0rem;
+
+    button {
+        background-color: rgb(18, 188, 131);
+        color: white;
+        font-size: 1.5rem;
+        padding: 0.5rem 1rem;
+        border: none;
+        cursor: pointer;
+
+        &:hover {
+            background-color: aquamarine;
+            color: black;
+        }
+
+    }
+}
+
 @keyframes scaleUp {
     from {
         transform: scale(0);
-    } to {
+    }
+
+    to {
         transform: scale(1);
     }
 }
